2006-02-05 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/cegui/Makefile.am: install Falagard.xsd to the gui root, as it's needed by xerces
    * src/components/ogre/cegui/datafiles/looknfeel/EmberLook.looknfeel: fixed some validation problems

2006-02-05 Erik Hjortsberg  <erik@katastrof.nu>

    * ember: fixed some problems with testing of java and xterm

2006-02-05 Erik Hjortsberg  <erik@katastrof.nu>

    * configure.ac: bump to version 0.4.0

2006-02-04 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/ChatWidget.cpp, src/components/ogre/widgets/ChatWidget.h, src/components/ogre/widgets/ChatWidget.xml, src/components/ogre/widgets/DebugWidget.cpp, src/components/ogre/widgets/DebugWidget.h, src/components/ogre/widgets/DebugWidget.xml, src/components/ogre/widgets/EntityPickerWidget.cpp, src/components/ogre/widgets/EntityPickerWidget.h, src/components/ogre/widgets/GiveWidget.cpp, src/components/ogre/widgets/GiveWidget.h, src/components/ogre/widgets/GiveWidget.xml, src/components/ogre/widgets/Performance.cpp, src/components/ogre/widgets/Performance.h, src/components/ogre/widgets/Performance.widget, src/components/ogre/widgets/ServerBrowserWidget.cpp, src/components/ogre/widgets/ServerBrowserWidget.h, src/components/ogre/widgets/ServerBrowserWidget.xml, src/components/ogre/widgets/Makefile.am, src/components/ogre/widgets/WidgetDefinitions.cpp: Removed obsolete files

2006-02-04 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/cegui/Makefile.am: added missing makefile

2006-02-04 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/Widget.*: added functionality for making the window opaque while it's active